--- a/style.css
+++ b/style.css
@@ -3,3 +3,18 @@
   margin: 0px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+body{
+  background: linear-gradient(to right, #83a4d4, #b6fbff);
+  padding: 20px;
+  color: #333;
+}
+
+.container{
+  max-width: 600px;
+  margin: auto;
+  background: #fff;
+  padding: 30px;
+  border-radius: 16px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+}
