--- a/style.css
+++ b/style.css
@@ -18,3 +18,24 @@ body{
   border-radius: 16px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
 }
+
+h1, h2{
+  color: #2c3e50;
+  text-align: center;
+}
+
+input{
+  display: block;
+  margin: 10px 0;
+  padding: 12px;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  transition:  0.3s, 0.3s;
+}
+
+input:focus{
+  border-color: #007bff;
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+  outline: none;
+}
