--- a/style.css
+++ b/style.css
@@ -39,3 +39,21 @@ input:focus{
   box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
   outline: none;
 }
+
+button{
+  padding: 12px;
+  margin-top: 15px;
+  width: 100%;
+  background: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+  cursor: pointer;
+  transition:  0.3s, 0.2s;
+}
+
+button:hover{
+  background: #0056b3;
+  transform: scale(1.03);
+}
