Add style <> styling the quizform and the result

--- a/style.css
+++ b/style.css
@@ -75,3 +75,24 @@ button:hover{
   background-color: #5a6268;
   transform: scale(1.05);
 }
+
+form label{
+  display: block;
+  background: #f1f1f1;
+  margin: 8px 0;
+  padding: 10px;
+  border-radius: 8px;
+  transition: 0.3s, 0.2s;
+  cursor: pointer;
+}
+
+form label:hover{
+  background: #e0e0e0;
+  transform: scale(1.02);
+}
+
+.result{
+  margin-top: 20px;
+  font-weight: bold;
+  text-align: center;
+}
