--- a/style.css
+++ b/style.css
@@ -96,3 +96,16 @@ form label:hover{
   font-weight: bold;
   text-align: center;
 }
+
+.userScores{
+  margin-bottom: 20px;
+  background: #f9f9f9;
+  padding: 15px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+}
+
+.userScores h3{
+  margin-bottom: 10px;
+  color: #007bff;
+}
