--- a/style.css
+++ b/style.css
@@ -76,6 +76,14 @@ button:hover{
   transform: scale(1.05);
 }
 
+.tab{
+  display: none;
+}
+
+.tab.active{
+  display: block;
+}
+
 form label{
   display: block;
   background: #f1f1f1;
