--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ button:hover{
   display: block;
 }
 
+/*Quiz options styling*/
 form label{
   display: block;
   background: #f1f1f1;
@@ -105,6 +106,7 @@ form label:hover{
   text-align: center;
 }
 
+/* Dashboard scores*/
 .userScores{
   margin-bottom: 20px;
   background: #f9f9f9;
